Add image profile

--- a/testAllTags.html
+++ b/testAllTags.html
@@ -23,6 +23,9 @@
 
 <body>
     <h1 style="text-align: center;">Tugas 1</h1>
+    <center>
+    <img src="https://avatars.githubusercontent.com/u/115205053?s=400&u=ad6aaafc6a4652227046fe3614d63feeb6dbd6ce&v=4" alt="My profile" width="100px">
+    </center>
     <div>Gunakan semua tag pada HTML</div>
     <p class="text1">
         Berikut adalah tag yang sering digunakan pada HTML:
